# CPP

./: .gitignore  CMakeLists.txt
CPP/: CPP.sln
Containers/: CMakeLists.txt
Containers/include/Containers/: BinTree.h  CyclicArray.h  Heap.h  MxCifQuadTree.h
Containers/src/: BinTree.cpp  CyclicArray.cpp  Heap.cpp  MxCifQuadTree.cpp
Containers/tests/: math_tests.cpp
MyConsoleApp1/: CMakeLists.txt
MyConsoleApp1/src/: main.cpp
MyConsoleApp2/: CMakeLists.txt
MyConsoleApp2/src/: main.cpp
MyConsoleApp3/: CMakeLists.txt
MyConsoleApp3/src/: main.cpp
MySolution/: CMakeLists.txt  Readme.txt
MySolution/MathLib/: CMakeLists.txt
MySolution/MathLib/include/Math/: Calculator.h
MySolution/MathLib/src/: Calculator.cpp
MySolution/MyApp/: CMakeLists.txt  main.cpp
MyStaticLib2/: CMakeLists.txt  Readme.md
MyStaticLib2/include/MyStaticLib/: math_utils.h
MyStaticLib2/include/MyStaticLib2/: math_utils.h
MyStaticLib2/src/: math_utils.cpp
MyStaticLib2/test/: main.cpp
MyStaticLib2/tests/: math_tests.cpp
MyStaticLib3/: CMakeLists.txt
MyStaticLib3/include/MyStaticLib/: Calculator.h  Heap.h
MyStaticLib3/include/MyStaticLib3/: Calculator.h  Heap.h
MyStaticLib3/src/: Calculator.cpp  Heap.cpp
MyStaticLib3/tests/: math_tests.cpp
